# MyClone

./: .gitignore  AGENTS.md  README.md  eval_cases.json  evaluate_ollama.py  prepare_kaggle_bundle.py  process_data.py  requirements.txt  run_kaggle.py  train.py  validate_dataset.py
bot(integrate this with napcat)/: bot.py  pyproject.toml  start.bat
bot(integrate this with napcat)/components/: __init__.py  embedding_client.py  memory_extraction.py  memory_store.py  online_memory.py
bot(integrate this with napcat)/data/: style_prompt.txt
bot(integrate this with napcat)/docs/: MEMORY_SYSTEM.md
bot(integrate this with napcat)/plugins/chat_style/: __init__.py
bot(integrate this with napcat)/scripts/: __init__.py  backfill_embeddings.py  extract_memories.py  import_memory.py  preprocess_memory.py  resolve_memory_conflicts.py  test_memory_system.py
model_process/: build_ollama_vl.ps1
skill_lora-to-ollama/: SKILL.md
