[project]
name = "qq-style-bot"
version = "0.1.0"
description = "QQ private chat bot that mimics user speaking style"
requires-python = ">=3.10"
dependencies = [
    "nonebot2[fastapi]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "httpx>=0.27.0",
    "numpy>=2.1.0",
    "python-dotenv>=1.0.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["plugins"]
builtin_plugins = []
